--- a/cityharvest/app/about.html
+++ b/cityharvest/app/about.html
@@ -43,8 +43,9 @@
                 <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#home" class="nav-link active">About</a></li>
                 <li class="nav-item"><a href="sermons.html" class="nav-link">Sermons</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Get Involved</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Publication</a></li>
+                <li class="nav-item"><a href="get_involved.html" class="nav-link">Get Involved</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Resources</a></li>
+                <li class="nav-item"><a href="events.html" class="nav-link">Events</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Ministries</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
@@ -181,6 +182,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/others.js"></script>
     <script src="../assets/js/about.js"></script>
 </body>
 
