--- a/cityharvest/app/get_involved.html
+++ b/cityharvest/app/get_involved.html
@@ -20,7 +20,7 @@
     <!-- === Title === -->
     <title>City Harvest Church | Contact</title>
     <!-- === CSS === -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/ch_mwanza.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/get_involved.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/header.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
@@ -43,7 +43,7 @@
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link change-Color">About</a></li>
                 <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
-                <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
+                <li class="nav-item"><a href="#home" class="nav-link active">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
                 <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
@@ -63,141 +63,41 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-txt">
-                        <h2>Mwanza</h2>
-                        <div class="social">
-                            <a href="https://www.youtube.com/@CityHarvestChurchDar" target="_blank"
+                        <h2>Connect</h2>
+                        <!-- <div class="social">
+                            <a href="https://www.youtube.com/@CityHarvestChurchDar/streams" target="_blank"
                                 rel="noopener noreferrer">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                            <a href="https://www.facebook.com/cityharvestchurchdar" target="_blank"
-                                rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://www.instagram.com/cityharvestchurchdar" target="_blank"
-                                rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="https://twitter.com/cityharvestdar" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- == Contact-info == -->
-        <section id="contact-info">
+        <!-- == Latest Sermons == -->
+        <section id="latest-sermons">
             <div class="container">
-                <h1 class="contact-info-title" data-aos="fade-right" data-aos-delay="100">Contact</h1>
-                <div class="even-columns">
-                    <div class="card p-3" data-aos="fade-right" data-aos-delay="100">
-                        <div class="left-our">
-                            <h1 class="head-our">OUR</h1>
-                        </div>
-                        <div class="inner-txt">
-                            <h2>Location</h2>
-                            <p>
-                                Makongoro Road, Bondeni Street.
-                                <br>
-                                <b>PLOT</b> 387 Ilemela.
-                            </p>
-                        </div>
-                        <i class="fas fa-map-marker-alt"></i>
-                    </div>
-                    <div class="card p-3" data-aos="fade-left" data-aos-delay="100">
-                        <div class="left-our">
-                            <h1 class="head-our">OUR</h1>
-                        </div>
-                        <div class="inner-txt">
-                            <h2>Phone</h2>
-                            <p>
-                                +255 654 340 122
-                            </p>
-                        </div>
-                        <i class="fas fa-phone"></i>
-                    </div>
-                </div>
-        </section>
-
-        <!-- == weekly-services == -->
-        <section id="weekly-services">
-            <div class="container">
-                <h1 class="weekly-services-title" data-aos="fade-right" data-aos-delay="100">WEEKLY SERVICES</h1>
-                <div class="even-columns">
-                    <div class="card bg-white" data-aos="flip-up" data-aos-delay="100">
-                        <div class="card-body">
-                            <h2>SUNDAY</h2>
-                            <p>
-                            <div class="first-service">
-                                First Service:
-                                <br>
-                                <small><b>7:00 AM - 9:00 AM</b></small>
-                            </div>
-                            <hr>
-                            <div class="second-service">
-                                Second Service:
-                                <br>
-                                <small><b>09:30 AM - 12:30 PM</b></small>
-                            </div>
-                            </p>
-                        </div>
-                        <div class="weekly-services-text">
-                            <span>SERVICE</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="even-columns">
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-body">
-                            <h2>TUESDAY</h2>
-                            <p>
-                                WELL.COM Groups:
-                                <br>
-                                <small><b>5:00 PM</b></small>
-                            </p>
-                        </div>
-                        <div class="weekly-services-text">
-                            <span>SERVICE</span>
-                        </div>
-                    </div>
-                    <div class="card" id="wed" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-body">
-                            <h2>WEDNESDAY</h2>
-                            <p>
-                                Evening Service:
-                                <br>
-                                <small><b>4:30 PM - 6:00 PM</b></small>
-                            </p>
-                        </div>
-                        <div class="weekly-services-text">
-                            <span>SERVICE</span>
-                        </div>
-                    </div>
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-body">
-                            <h2>FRIDAY</h2>
-                            <p>
-                                Evening Prayers:
-                                <br>
-                                <small><b>4:30 PM - 6:00 PM</b></small>
-                            </p>
-                        </div>
-                        <div class="weekly-services-text">
-                            <span>SERVICE</span>
-                        </div>
+                <h1 class="latest-sermons-title">Latest Sermons</h1>
+                <div class="row">
+                    <div class="video-wrapper">
+                        <iframe frameborder="0"
+                            src="https://www.youtube.com/embed?listType=playlist&list=UUQLLAyIDCHSstiXWt5w2dpQ">
+                        </iframe>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- == Locatiokn | Map === -->
-        <section class="map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.9322177739587!2d39.25529867672137!3d-6.778104448775002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4db2660de561%3A0x1d3a5d62d5b3eb67!2sRock%20city%20mall!5e0!3m2!1sen!2stz!4v1693618118313!5m2!1sen!2stz"
-                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+        <!-- == sermons == -->
+        <section id="sermons">
+            <div class="container">
+                <div id="video-list" class="video-grid"></div>
+                <div id="page-number" class="page-number"></div>
+                <div id="pagination" class="pagination"></div>
+            </div>
         </section>
+
     </main>
 
     <!-- === Footer === -->
@@ -277,6 +177,7 @@
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
     <script src="../assets/js/others.js"></script>
+    <script src="../assets/js/get_involved.js"></script>
 </body>
 
 </html>
