--- a/cityharvest/app/sermons.html
+++ b/cityharvest/app/sermons.html
@@ -22,6 +22,7 @@
     <!-- === CSS === -->
     <link rel="stylesheet" type="text/css" href="../assets/css/sermons.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/header.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/utilities.css">
 </head>
@@ -41,9 +42,10 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link change-Color">About</a></li>
-                <li class="nav-item"><a href="" class="nav-link active">Sermons</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Get Involved</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Publication</a></li>
+                <li class="nav-item"><a href="#home" class="nav-link active">Sermons</a></li>
+                <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
+                <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
+                <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link change-Color">Contact</a></li>
             </ul>
@@ -177,6 +179,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/others.js"></script>
     <script src="../assets/js/sermons.js"></script>
 </body>
 
