--- a/cityharvest/app/ch_kigamboni.html
+++ b/cityharvest/app/ch_kigamboni.html
@@ -22,6 +22,7 @@
     <!-- === CSS === -->
     <link rel="stylesheet" type="text/css" href="../assets/css/ch_kigamboni.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/header.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/utilities.css">
 </head>
@@ -42,8 +43,9 @@
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link change-Color">About</a></li>
                 <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Get Involved</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Publication</a></li>
+                <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
+                <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
+                <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link change-Color">Contact</a></li>
             </ul>
@@ -274,7 +276,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/contact.js"></script>
+    <script src="../assets/js/others.js"></script>
 </body>
 
 </html>
