--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -22,6 +22,7 @@
     <!-- === CSS === -->
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/header.css">
     <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
     <link rel="stylesheet" type="text/css" href="assets/css/utilities.css">
 </head>
@@ -42,8 +43,9 @@
                 <li class="nav-item"><a href="#home" class="nav-link active">Home</a></li>
                 <li class="nav-item"><a href="app/about.html" class="nav-link change-Color">About</a></li>
                 <li class="nav-item"><a href="app/sermons.html" class="nav-link change-Color">Sermons</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Get Involved</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Publication</a></li>
+                <li class="nav-item"><a href="app/get_involved.html" class="nav-link change-Color">Get Involved</a></li>
+                <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
+                <li class="nav-item"><a href="app/events.html" class="nav-link change-Color">Events</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="app/contact.html" class="nav-link change-Color">Contact</a></li>
             </ul>
@@ -179,6 +181,7 @@
                 </div>
             </div>
         </section>
+        
         <!-- == Campus == -->
         <section id="campus">
             <div class="container">
