--- a/cityharvest/app/get_involved.html
+++ b/cityharvest/app/get_involved.html
@@ -63,41 +63,160 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-txt">
-                        <h2>Connect</h2>
-                        <!-- <div class="social">
-                            <a href="https://www.youtube.com/@CityHarvestChurchDar/streams" target="_blank"
-                                rel="noopener noreferrer">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div> -->
+                        <h2>Get Involved</h2>
+                        <p class="lead text-secondary">
+                            There is always a place for you, just ride in.
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- == Latest Sermons == -->
-        <section id="latest-sermons">
+        <!-- == Get involved == -->
+        <section id="get_involved">
             <div class="container">
-                <h1 class="latest-sermons-title">Latest Sermons</h1>
-                <div class="row">
-                    <div class="video-wrapper">
-                        <iframe frameborder="0"
-                            src="https://www.youtube.com/embed?listType=playlist&list=UUQLLAyIDCHSstiXWt5w2dpQ">
-                        </iframe>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/invite.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Invite</h2>
+                            <p>
+                                Never leave your friends behind, let them experince the goodness of God here at City
+                                Harvest.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/serve.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Serve</h2>
+                            <p>
+                                At City Harvest, there are many opportunities to serve God. Let's do it together.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/volunteer.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Volunteer</h2>
+                            <p>
+                                There is always a place for you, just ride in.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/outreach.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>OutReach</h2>
+                            <p>
+                                Go and make people disciples of chirst.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/get-involved.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Giving</h2>
+                            <p>
+                                Give generously and with a cheerful heart.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/prayer.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Prayer Meetings</h2>
+                            <p>
+                                Get together every Friday to seek God and His power.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/bible.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Bible Study</h2>
+                            <p>
+                                Get together every Wednesday to learn the word of God.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/groups.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>WELL.COM GROUPS</h2>
+                            <p>
+                                Fellowship with other members weekly in small groups.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-
-        <!-- == sermons == -->
-        <section id="sermons">
-            <div class="container">
-                <div id="video-list" class="video-grid"></div>
-                <div id="page-number" class="page-number"></div>
-                <div id="pagination" class="pagination"></div>
-            </div>
-        </section>
-
     </main>
 
     <!-- === Footer === -->
