--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -181,7 +181,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- == Campus == -->
         <section id="campus">
             <div class="container">
@@ -312,11 +312,11 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- == Latest Message == -->
         <section id="latest-message">
             <div class="container">
-                <h1 class="latest-message-title" data-aos="fade-right" data-aos-delay="100">Latest Message</h1>
+                <h1 class="latest-message-title" data-aos="fade-right" data-aos-delay="100">Latest Sermon</h1>
                 <div class="row">
                     <div class="video-wrapper" data-aos="fade-up" data-aos-delay="100">
                         <iframe frameborder="0"
@@ -400,6 +400,89 @@
                         </div>
                         <div class="weekly-services-text">
                             <span>SERVICE</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- == Events == -->
+        <section id="events">
+            <div class="container">
+                <h1 class="events-title" data-aos="fade-right" data-aos-delay="100">Upcoming Events</h1>
+                <p class="events-para" data-aos="fade-left" data-aos-delay="100">
+                    Stay in the know about what is happening here at City Harvest Church.
+                </p>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="assets/img/events/events.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                            <div class="events-text">
+                                <span>10 SEP</span>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <span class="location">
+                                <small>
+                                    <i class="fas fa-map-marker-alt text-primary"></i>
+                                    <span>Bahari Beach</span>
+                                </small>
+                            </span>
+                            <h2>Extended Worship</h2>
+                            <p>
+                                To be held this sunday, 10th September at TAG City Harvest Dar - Bahari Beach.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">See Event</a>
+                                <div class="day-time">
+                                    <span class="day"><small><b>Sunday</b></small></span>
+                                    <div class="flex-space-between">
+                                        <div class="time">
+                                            <small>
+                                                <i class="fas fa-clock text-primary"></i>
+                                                <span>13:00 - 15:00 PM</span>
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="assets/img/events/events.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                            <div class="events-text">
+                                <span>10 SEP</span>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <span class="location">
+                                <small>
+                                    <i class="fas fa-map-marker-alt text-primary"></i>
+                                    <span>Bahari Beach</span>
+                                </small>
+                            </span>
+                            <h2>Extended Worship</h2>
+                            <p>
+                                To be held this sunday, 10th September at TAG City Harvest Dar - Bahari Beach.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">See Event</a>
+                                <div class="day-time">
+                                    <span class="day"><small><b>Sunday</b></small></span>
+                                    <div class="flex-space-between">
+                                        <div class="time">
+                                            <small>
+                                                <i class="fas fa-clock text-primary"></i>
+                                                <span>13:00 - 15:00 PM</span>
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
