--- a/cityharvest/app/get_involved.html
+++ b/cityharvest/app/get_involved.html
@@ -85,7 +85,7 @@
                         <div class="card-body">
                             <h2>Invite</h2>
                             <p>
-                                Never leave your friends behind, let them experince the goodness of God here at City
+                                Never leave your friends behind, let them experience the goodness of God here at City
                                 Harvest.
                             </p>
                             <div class="card-btns">
@@ -147,7 +147,7 @@
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="../assets/img/get-involved/get-involved.jpg" alt=""
+                                <img src="../assets/img/get-involved/give.jpg" alt=""
                                     class="card-img-top img-fluid">
                             </div>
                         </div>
